--- a/Web_Scraper/Web_Scraper.csproj
+++ b/Web_Scraper/Web_Scraper.csproj
@@ -17,4 +17,8 @@
     <PackageReference Include="Selenium.WebDriver" Version="4.13.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
